<resources>
    <string name="app_name">News App</string>
    <string name="description">description</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_swipe_for_update">Please, swipe for update</string>
    <string name="read">read</string>
    <string name="log_in_for_continue">Log in for continue</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter">enter</string>
    <string name="or">or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_stories">Top Stories</string>
    <string name="back">back</string>
    <string name="history_stock">History Stock</string>
    <string name="date">Date:</string>
    <string name="open">Open:</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="close">Close:</string>
    <string name="using_flow">Using Flow</string>
    <string name="internet_status">Internet status:</string>
    <string name="location">Location:</string>
    <string name="location_value">You have banned the use of your location</string>
    <string name="connected">Connected</string>
    <string name="no_connected">No Connected</string>
</resources>