<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clFragmentLoginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTextLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_for_continue"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etNameSignIn"/>

    <EditText
        android:id="@+id/etNameSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textSize="18sp"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/light_gray"
        android:textColor="@color/black"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPersonName"
        android:autofillHints="textPersonName"
        android:background="@drawable/style_btn_splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnEnterNameSignIn" />

    <Button
        android:id="@+id/btnEnterNameSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/style_btn_enter_name"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:paddingHorizontal="40dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNameSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvTextBetweenOr"/>

    <TextView
        android:id="@+id/tvTextBetweenOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEnterNameSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogleSignIn"/>

    <Button
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_logo_google"
        android:drawablePadding="10dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextBetweenOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>